# trader

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
apps/agent/: README.md  package.json  pnpm-lock.yaml  system-prompt.md  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/agent/src/: config.ts  headless.ts  main.ts  repo.ts  runner.ts  session-picker.ts  tool-adapter.ts  tui.ts
apps/agent/src/forwarder/: client.ts  errors.ts  index.ts  schemas.ts  tools.ts  types.ts
apps/agent/tests/: config.test.ts  repo.test.ts  runner.test.ts  session-picker.test.ts  tool-adapter.test.ts  tui-wiring.test.ts
apps/agent/tests/e2e/: e2e.test.ts  run-gateway.py
apps/agent/tests/forwarder/: client.test.ts  index.test.ts  schemas.test.ts  stream.test.ts  tools.test.ts
apps/backtest/: main.py
apps/cli/: main.py
apps/live/: main.py  pi_gateway.py
apps/smoke/: main.py  mock_adapter.py
config/: backtest.yaml  live.yaml  smoke.yaml
contracts/: README.md  dispatch.schema.json  events.schema.json  tools.schema.json
deploy/: compose.yaml
docs/adr/: 0001-project-layout.md  0002-contracts-strategy.md  0003-persistence-read-face.md  0006-persistence-read-face.md  0007-mcp-tool-integration.md  Protocol.md  README.md  frozen.md  registry.md  ts_event-ingest.md
fixtures/: conformance_mock.json
scripts/: generate_contracts.py
tests/: conftest.py
tests/conformance/: test_adapters.py  test_alpaca_account_conformance.py
tests/e2e/: test_smoke.py
tests/fixtures/alpaca/: account.json  activities.json  crypto_bars.json  crypto_quote.json  crypto_trade.json  option_bars.json  option_quote.json  option_trade.json  orders.json  positions.json  stock_bars.json  stock_quote.json  stock_trade.json  trade_update_fill.json
tests/integration/: test_config.py  test_pi_gateway.py  test_pipeline.py
tests/unit/adapters/account/: test_alpaca_account.py
tests/unit/adapters/market/: test_alpaca_market.py
tests/unit/agent/: test_mcp.py  test_tools.py
tests/unit/apps/: test_smoke_market_config.py
tests/unit/bus/: conftest.py  test_inprocess_replay.py  test_redis_streams.py
tests/unit/contracts/: test_instruments.py  test_timeframe.py
tests/unit/features/: test_macd.py  test_rsi.py
tests/unit/persistence/: conftest.py  test_protocol_conformance.py  test_repository.py  test_writer_upsert.py
tests/unit/plugins/: test_registry.py
tests/unit/services/account/: test_account_service.py
tests/unit/services/guardrail/: test_guardrail.py
tests/unit/services/market/: test_market_service.py
