[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trader"
version = "0.1.0"
description = "Trader: A modular, pluggable agentic trading system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",
    "anyio>=4.2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
ibkr = ["ib-insync>=0.9.70"]
polygon = ["polygon-api-client>=1.0.0"]
alpaca = ["alpaca-py>=0.20.0"]
databento = ["databento>=0.12.0"]
benzinga = []
newsapi = []
sentiment = ["torch>=2.0.0", "transformers>=4.30.0"]
# redis: required by RedisStreamBus (durable, multi-process bus backend).
# Not a hard dep — InProcessBus works without it, and importing
# RedisStreamBus lazily raises a clear ImportError if the extra is missing.
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "black>=23.12.0",
    "httpx>=0.27.0",
    # fakeredis: in-process redis mock for the test suite
    # (tests/unit/bus/test_redis_streams.py drives RedisStreamBus
    # end-to-end without a real Redis server).
    "fakeredis>=2.20.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/contracts/src/ta",
    "packages/plugins/src/ta",
    "packages/transport/src/ta",
    "packages/bus/src/ta",
    "packages/config/src/ta",
    "packages/observability/src/ta",
    "packages/persistence/src/ta",
    "packages/market/src/ta",
    "packages/news/src/ta",
    "packages/account/src/ta",
    "packages/feature/src/ta",
    "packages/guardrail/src/ta",
    "packages/tools/src/ta",
    "packages/agent/src/ta",
    "packages/strategies/src/ta",
    "packages/adapters",
    "packages/features"
]

[tool.black]
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests", "packages"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
namespace_packages = true
mypy_path = [
    "packages",
    "packages/contracts/src",
    "packages/infra/bus/src",
    "packages/infra/config/src",
    "packages/infra/observability/src",
    "packages/infra/persistence/src",
    "packages/infra/plugins/src",
    "packages/infra/transport/src",
    "packages/services/account/src",
    "packages/services/feature/src",
    "packages/services/guardrail/src",
    "packages/services/market/src",
    "packages/services/news/src",
    "packages/agent/agent/src",
    "packages/agent/strategies/src",
    "packages/agent/tools/src",
]
ignore_missing_imports = true
